# ninjar

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  ssh.yml  test.yml  type.yml
src/ninjar/: __init__.py  cmds.py  expr.py  main.py  ninja.py  shell.py  writeln.py
tests/: __init__.py
