[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "XiangYang", email = "hinata.hoshino@foxmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
]
dependencies = [
  "colorama>=0.4.5",
]
description = "A small example package"
keywords = ["ninjar generator"]
license = {file = "LICENSE"}
name = "ninjar"
readme = "README.md"
requires-python = ">=3.9"
version = "1.0.0"

[project.urls]
Repository = "hhttps://github.com/XiangYyang/ninjar.git"
